# dnf-plugin-anyrepo

./: .gitignore  .goreleaser.yaml  README.md  justfile  pyproject.toml
.github/workflows/: release.yaml  test.yaml
dnf_plugin_anyrepo/: __init__.py  cli.py  config.py  dnf_plugin.py  manager.py  repo.py
dnf_plugin_anyrepo/providers/: github_release.py
packaging/: anyrepo.conf  dnf-anyrepo.bash-completion  write_build_metadata.py
tests/: test_bash_completion.py  test_cli.py  test_config.py  test_dnf_plugin.py  test_manager.py  test_release_provider.py  test_write_build_metadata.py
